--- a/flyoutmenu/build.gradle
+++ b/flyoutmenu/build.gradle
@@ -1,4 +1,9 @@
 apply plugin: 'com.android.library'
+apply plugin: 'com.jfrog.bintray'
+apply plugin: 'com.github.dcendents.android-maven'
+
+group = 'org.zakariya.flyoutmenus'
+version = '0.5.0'
 
 android {
 	compileSdkVersion 23
@@ -8,7 +13,7 @@ android {
 		minSdkVersion 17
 		targetSdkVersion 23
 		versionCode 1
-		versionName "1.0"
+		versionName version
 	}
 	buildTypes {
 		release {
@@ -22,4 +27,57 @@ dependencies {
 	compile fileTree(dir: 'libs', include: ['*.jar'])
 	testCompile 'junit:junit:4.12'
 	compile 'com.android.support:appcompat-v7:23.4.0'
+}
+
+task generateSourcesJar(type: Jar) {
+	from android.sourceSets.main.java.srcDirs
+	classifier = 'sources'
+}
+
+task generateJavadocs(type: Javadoc) {
+	source = android.sourceSets.main.java.srcDirs
+	classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
+	failOnError false // I don't want javadoc errors to prevent the build from completing
+}
+
+task generateJavadocsJar(type: Jar, dependsOn: generateJavadocs) {
+	from generateJavadocs.destinationDir
+	classifier 'javadoc'
+}
+
+artifacts {
+	archives generateJavadocsJar
+	archives generateSourcesJar
+}
+
+def libraryDescription = 'Simple Material-style FlyoutMenu for Android'
+
+Properties properties = new Properties()
+properties.load(project.rootProject.file('local.properties').newDataInputStream())
+
+bintray {
+	user = properties.getProperty("bintray.user")
+	key = properties.getProperty("bintray.apikey")
+	configurations = ['archives']
+	pkg {
+		repo = 'maven'
+		name = 'flyoutmenus'
+
+		desc = libraryDescription
+		websiteUrl = 'https://github.com/ShamylZakariya/FlyoutMenus'
+		vcsUrl = 'https://github.com/ShamylZakariya/FlyoutMenus.git'
+		licenses = ["MIT"]
+		publish = true
+		publicDownloadNumbers = true
+
+		version {
+			desc = libraryDescription
+			released  = new Date()
+			gpg {
+				sign = true //Determines whether to GPG sign the files. The default is false
+				passphrase = properties.getProperty("bintray.gpg.password")
+				//Optional. The passphrase for GPG signing'
+			}
+		}
+	}
 }
