--- a/build.gradle
+++ b/build.gradle
@@ -1,27 +1,27 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-	repositories {
-		jcenter()
-	}
-	dependencies {
-		classpath 'com.android.tools.build:gradle:2.1.2'
+    repositories {
+        google()
+        jcenter()
+        
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:3.4.0'
 
-		classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.6'
-		classpath "com.github.dcendents:android-maven-gradle-plugin:1.3"
-
-		// NOTE: Do not place your application dependencies here; they belong
-		// in the individual module build.gradle files
-	}
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.0'
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.4'
+    }
 }
 
 allprojects {
-	repositories {
-		jcenter()
-		maven {url "https://clojars.org/repo/"}
-	}
+    repositories {
+        google()
+        jcenter()
+        
+    }
 }
 
 task clean(type: Delete) {
-	delete rootProject.buildDir
+    delete rootProject.buildDir
 }
